# quaint

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: build.py  publish.py
src/quaint/: context.py
src/quaint/ai/: requests.py
src/quaint/cli/: main.py
src/quaint/core/: ai_linter.py  context.py  input_file.py  pipeline.py  strutil.py  textifier.py
src/quaint/prompts/: lint_screenplay.txt
src/scrimp/convert/: convert.py
src/scrimp/prompts/: lint_generic_text.txt  lint_screenplay.txt
src/scrimp/textify/: textify.py
tests/: test_context.py  test_strutil.py  test_textifier.py
